# xarray-array-testing

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: ci.yaml
ci/requirements/: docs.yaml  environment.yaml
docs/: conf.py
xarray_array_testing/: __init__.py  base.py  creation.py  decorator.py  indexing.py  reduction.py  strategies.py
xarray_array_testing/tests/: test_cubed.py  test_numpy.py
